--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,14 @@
     <title>ENGL080</title>
     <!-- Styling -->
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Lusitana" rel="stylesheet">
   </head>
   <body>
-  	Running.
+  	<div class="index-container">
+  		<!-- Title -->
+	  	<div class="index-title">
+	  		Disinformation Game
+	  	</div>
+  	</div>
   </body>
 </html>
