--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,18 @@
     <title>ENGL080</title>
     <!-- Styling -->
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Lusitana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
   <body>
   	<div class="index-container">
-  		<!-- Title -->
-	  	<div class="index-title">
-	  		Disinformation Game
-	  	</div>
+  		<!-- Header -->
+  		<div class="index-header--container">
+  			<div class="index-title--container">
+	  			<div class="index-title--text">
+		  			Disinformation
+		  		</div>
+	  		</div>
+		</div>
   	</div>
   </body>
 </html>
