--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,18 @@
   	<div class="index-container">
   		<!-- Header -->
   		<div class="index-header--container">
+        <!-- Title -->
   			<div class="index-title--container">
 	  			<div class="index-title--text">
 		  			Disinformation
 		  		</div>
 	  		</div>
+        <!-- Links -->
+        <div class="index-links--container">
+          <div class="index-links--text">
+            About
+          </div>
+        </div>
 		</div>
   	</div>
   </body>
