--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>ENGL080</title>
     <!-- Styling -->
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
   </head>
   <body>
   	<div class="index-container">
@@ -22,8 +22,18 @@
           <div class="index-links--text">
             About
           </div>
+          <div class="index-links--text">
+            Play
+          </div>
         </div>
-		</div>
+		  </div>
+      <!-- Main -->
+      <div class="index-main--container">
+        <div class="index-center--container">
+          <div class="index-center--title">Disinformation</div>
+          <div class="index-center--subtitle"></div>
+        </div>
+      </div>
   	</div>
   </body>
 </html>
