--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,9 @@
           </div>
         </div>
       </div>
-
-      <div class="landscape--container">
-        <object class="landscape--forest" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
-        <!-- <img class="landscape--park" src="{{ url_for('static',filename='park.svg') }}"/> -->
+      <div class="index-container--bottom">
+        <object class="landscape--forest" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
+        <object class="landscape--park" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
       </div>
   	</div>
   </body>
