fixed graphics classes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
   </head>
   <body>
-    
   	<div class="index-container">
       <div class="index-container--top">
         <!-- Header -->
@@ -46,8 +45,8 @@
         </div>
       </div>
       <div class="index-container--bottom">
-        <object class="landscape--forest" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
-        <object class="landscape--park" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
+        <object class="clipart left" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
+        <object class="clipart right" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
       </div>
   	</div>
   </body>
