--- a/templates/play.html
+++ b/templates/play.html
@@ -50,13 +50,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="answer--container">
+                      <div class="answer--button left">Fake</div>
+                      <div class="answer--button right">Real</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <script type="text/javascript">
-      var inputs = {{ inputs | safe }}
-      console.log(inputs);
+      // var inputs = {{ inputs | safe }}
+      // console.log(inputs);
     </script>
 </body>
 
