--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
                         Test your ability to detect fake news headlines.
                     </div>
                     <div class="index-center--button-container">
-                        <div class="index-center--button left">Play</div>
-                        <div class="index-center--button right">About</div>
+                        <div class="button--primary left index">Play</div>
+                        <div class="button--primary right">About</div>
                     </div>
                 </div>
             </div>
