minimal progress on reveal answer

--- a/static/style.css
+++ b/static/style.css
@@ -104,13 +104,14 @@ body {
 }
 
 .reveal--container {
+    visibility: hidden;
     display: flex;
     height: auto;
     width: auto;
     background: #FCDFE3;
     color: #EA4A64;
     border: 2px solid #EA4A64;
-    margin: 0 0 20px 0;
+    margin: 0 0 10px 0;
     padding: 5px;
     border-radius: 5px;
     font-size: 14px;
